--- a/Dbms Project Django/aboutus/templates/Aboutus/about.html
+++ b/Dbms Project Django/aboutus/templates/Aboutus/about.html
@@ -7,12 +7,11 @@
 
       <div class="main-wrap">
         <div class="cover_1 cover_sm">
-          <div class="img_bg" style="background-image: url({% static 'site_static/img/slider-1.jpg' %})" data-stellar-background-ratio="0.5">
+          <div class="img_bg" style="background-image: url({% static 'site_static/img/abt.jpg' %})" data-stellar-background-ratio="0.5">
             <div class="container">
               <div class="row align-items-center justify-content-center">
                 <div class="col-md-7" data-aos="fade-up">
                   <h2 style="text-align: center" class="heading">About Food Mania</h2>
-                  <p style="text-align: center; color:springgreen " class="lead">FOOD MANIA was incorporated from last 30 years. Divas Bhadani is M.D of the company under whose leadership, we have been scaling new heights in the market.</p>
                 </div>
               </div>
             </div>
