--- a/Dbms Project Django/contact/templates/contact/contact.html
+++ b/Dbms Project Django/contact/templates/contact/contact.html
@@ -5,12 +5,10 @@
 
       <div class="main-wrap">
         <div class="cover_1 cover_sm">
-          <div class="img_bg" style="background-image: url({% static 'site_static/img/slider-1.jpg' %})" data-stellar-background-ratio="0.5">
+          <div class="img_bg" style="background-image: url({% static 'site_static/img/contact.jpg' %})" data-stellar-background-ratio="0.5">
             <div class="container">
               <div class="row align-items-center justify-content-center">
                 <div class="col-md-7" data-aos="fade-up">
-                  <h2 style="text-align: center"; class="heading">Contact Us</h2>
-                  <p style="text-align: center"; class="lead">Feel Free to Contact us and share your views</p>
                 </div>
               </div>
             </div>
