--- a/Dbms Project Django/reservation/templates/Reservation/reservation.html
+++ b/Dbms Project Django/reservation/templates/Reservation/reservation.html
@@ -7,12 +7,12 @@
 
       <div class="main-wrap">
         <div class="cover_1 cover_sm">
-          <div class="img_bg" style="background-image: url({% static 'site_static/img/slider-1.jpg' %})" data-stellar-background-ratio="0.5">
+          <div class="img_bg" style="background-image: url({% static 'site_static/img/rev.jpg' %})" data-stellar-background-ratio="0.5">
             <div class="container">
               <div class="row align-items-center justify-content-center">
                 <div class="col-md-7" data-aos="fade-up">
                   <h2 style="text-align: center" class="heading">Reservation</h2>
-                  <p style="text-align: center" class="lead">Food Mania provides you a simple booking system to boost the direct bookings of your Table in our restuarant, with a hassle free and easy to use approach.</p>
+                    <p style="text-align: center;color: #0b0b0b;size: 30px" class="lead"><strong>Food Mania provides you a simple booking system to boost the direct bookings of your Table in our restuarant, with a hassle free and easy to use approach.</strong></p>
                 </div>
               </div>
             </div>
